# Cpp-OpenCL

./: CMakeLists.txt  README.md
include/: clErrors.h  kernelLoader.h
kernels/: matrix_mult_kernel.cl
src/: main.cpp  matrix.cpp
